# animatron

./: .gitignore  README.md  demosin.py  lab.py  pyproject.toml  start.sh  teachapp.py  teachdemo.py  test_tk_fullscreen.py
demos/: aliasing.py  demosin.py  expc2d.py  expc3d.py  sound.py  square.m  tfsigfini.py  tz_un.py
demos/Bases du signal/: expc2d.py  expc3d.py  expcnum3d.py  fct_propre.py  signum.py  sli.py  slni.py  snonlin.py
demos/E3A - SSL/: ssl_ex10.py  ssl_ex11.py  ssl_ex7.py  ssl_ex8.py
demos/Fourier/: resume.py
demos/Laplace/: exp.py  heaviside.py
demos/SSL - E3A/: ssl_ex7.py
demos/Transformées en Z/: tz_un.py
lab/: test-treeview.py  test-ttkwidget.py
tests/: test_teachdemo.py
