[tool.poetry]
name = "teachdemo"
version = "0.1.0"
description = "A simple tool to display interactive figures in classrooms"
authors = ["François Orieux <orieux@l2s.centralesupelec.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1.2"
oct2py = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
