[tool.poetry]
name = "teachapp"
version = "0.1.0"
description = "A simple tool to display interactive figures in classrooms"
authors = ["François Orieux <orieux@l2s.centralesupelec.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.1.2"
oct2py = "^5.0.4"
logzero = "^1.5.0"
sounddevice = "^0.3.14"
soundfile = "^0.10.3"
nuitka = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.11.1"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

